--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=JpaTutorial
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.url= jdbc:mysql://localhost:3306/sys?useSSl=false
 spring.datasource.username = root
 spring.datasource.password = Test@1234
+
 
