--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=JpaTutorial
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.url= jdbc:mysql://localhost:3306/sys?useSSl=false
 spring.datasource.username = root
 spring.datasource.password = Test@1234
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
 
 
